package com.sejong.newsletterservice.support.common;

public enum EmailFrequency {
    DAILY, WEEKLY, MONTHLY
}
